--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-registration==2.4.1
 gunicorn==19.9.0
 Pillow==5.2.0
 psycopg2==2.7.5
+psycopg2-binary==2.7.5
 python-decouple==3.1
 pytz==2018.5
 whitenoise==3.3.1
